 * Issue 302: process number of voluntary and involuntary context switches.
 * Issue 303: (Windows) the Process methods below were always raising
   AccessDenied for any process not owned by current user. Now this is no longer
   true:
    - create_time
    - get_cpu_times()
    - get_cpu_percent()
    - get_num_handles()
    - get_io_counters()

BUGFIXES

 * Issue 298: (OSX - BSD) memory leak in get_num_fds().
 * Issue 299: potential memory leak every time PyList_New(0) is used.
 * Issue 303: (Windows) potential heap corruption in get_num_threads() and
   get_status() Process methods.


0.5.1 - 2012-06-29
------------------

NEW FEATURES

 * Issue 293: (Windows) process executable path is now determined by asking the
   OS instead of being guessed from process cmdline.

BUGFIXES

 * Issue 292: (Linux) race condition in process files/threads/connections.
 * Issue 294: (Windows) Process CPU affinity is only able to set CPU #0.


0.5.0 - 2012-06-27
------------------

NEW FEATURES

 * Issue #195: (Windows) number of handles opened by process.
 * Issue #209: psutil.disk_partitions() now provides also mount options.
 * Issue #229: list users currently connected on the system (psutil.get_users()).
 * Issue #238: (Linux, Windows) process CPU affinity (get and set).
 * Issue #242: Process.get_children(recursive=True): return all process
   descendants.
 * Issue #245: (POSIX) Process.wait() incrementally consumes less CPU cycles.
 * Issue #257: (Windows) removed Windows 2000 support.
 * Issue #258: (Linux) Process.get_memory_info() is now 0.5x faster.
 * Issue #260: process's mapped memory regions. (Windows patch by wj32.64, OSX
   patch by Jeremy Whitlock)
 * Issue #262: (Windows) psutil.disk_partitions() was slow due to inspecting
   the floppy disk drive also when "all" argument was False.
 * Issue #273: psutil.get_process_list() is deprecated.
 * Issue #274: psutil no longer requires 2to3 at installation time in order to
   work with Python 3.